@@ -21,7 +21,6 @@
 		}
 	},
 	"offerConclusionDecision": "Offer conclusion rejected",
-	"offerConclusionDecisionMessage": "Insurer comfirms the closed offer. Contract in preparation.",
 	"insurerContact": {
 		"contactName": "Broker Account Management West",
 		"contactMail": "info-west@testinsurer.ch",
