@@ -1,101 +1,106 @@
 {
-	"$schema": "https://json-schema.org/draft/2019-09/schema",
-	"description": "Offer NLPI conclusion decision",
-	"type": "object",
-	"properties": {
-		"processIdentificationNo": {
-			"$ref": "../../../Generics/v0.5.0/ProcessIdentificationNoType.json"
-		},
-		"timestamp": {
-			"$ref": "../../../Generics/v0.5.0/TimestampType.json"
-		},
-		"processName": {
-			"description": "Name of the process",
-			"const": "offer.nlpi"
-		},
-		"subProcessName": {
-			"description": "Name of the subprocess",
-			"const": "conclusionDecision"
-		},
-		"processVersion": {
-			"description": "Version of the process",
-			"const": "0.5.0"
-		},
-		"header": {
-			"$ref": "../../../Generics/v0.5.0/HeaderType.json"
-		},
-		"customer": {
-			"$ref": "../../../Generics/v0.5.0/CompanyCustomerType.json"
-		},
-		"quotationNo": {
-			"$ref": "../../../Generics/v0.5.0/QuotationNoType.json"
-		},
-		"offerConclusionDecision": {
-			"description": "Definitive decision to close the offer",
-			"type": "string",
-			"enum": [
-				"offerConclusionAcceptance",
-				"offerConclusionDenial"
-			]
-		},
-		"offerConclusionDenialReason": {
-			"$ref": "../../../Generics/v0.5.0/RestrictedStringType.json",
-			"description": "Reason for refusal/waiver of an offer conclusion"
-		},
-		"offerConclusionDecisionMessage": {
-			"description": "Feedback text for the offer closure decision",
-			"type": "string"
-		},
-		"insurerContact": {
-			"$ref": "../../../Generics/v0.5.0/ContactType.json"
-		}
-	},
-	"additionalProperties": false,
-	"allOf": [
-		{
-			"if": {
-				"properties": {
-					"offerConclusionDecision": {
-						"const": "offerConclusionDenial"
-					}
-				}
-			},
-			"then": {
-				"required": [
-					"offerConclusionDenialReason"
-				]
-			}
-		},
-		{
-			"if": {
-				"properties": {
-					"offerConclusionDecision": {
-						"const": "offerConclusionAcceptance"
-					}
-				}
-			},
-			"then": {
-				"required": [
-					"quotationNo"
-				],
-				"not": {
-					"required": [
-						"offerConclusionDenialReason"
-					]
-				}
-			}
-		}
-	],
-	"required": [
-		"processIdentificationNo",
-		"timestamp",
-		"processName",
-		"subProcessName",
-		"processVersion",
-		"header",
-		"customer",
-		"offerConclusionDecision",
-		"insurerContact"
-	],
-	"unevaluatedProperties": false
+  "$schema": "https://json-schema.org/draft/2019-09/schema",
+  "description": "Offer NLPI conclusion decision",
+  "type": "object",
+  "properties": {
+    "processIdentificationNo": {
+      "$ref": "../../../Generics/v0.5.0/ProcessIdentificationNoType.json"
+    },
+    "timestamp": {
+      "$ref": "../../../Generics/v0.5.0/TimestampType.json"
+    },
+    "processName": {
+      "description": "Name of the process",
+      "const": "offer.nlpi"
+    },
+    "subProcessName": {
+      "description": "Name of the subprocess",
+      "const": "conclusionDecision"
+    },
+    "processVersion": {
+      "description": "Version of the process",
+      "const": "0.5.0"
+    },
+    "header": {
+      "$ref": "../../../Generics/v0.5.0/HeaderType.json"
+    },
+    "quotationNo": {
+      "description": "Offer number. If the offer conclusion is accepted, one of quotationNo and contractNo must be provided.",
+      "$ref": "../../../Generics/v0.5.0/QuotationNoType.json"
+    },
+    "contractNo": {
+      "description": "Contract number. If the offer conclusion is accepted, one of quotationNo and contractNo must be provided.",
+      "$ref": "../../../Generics/v0.5.0/QuotationNoType.json"
+    },
+    "offerConclusionDecision": {
+      "description": "Definitive decision to close the offer",
+      "type": "string",
+      "enum": [
+        "Offer conclusion accepted",
+        "Offer conclusion rejected"
+      ]
+    },
+    "offerConclusionDecisionMessage": {
+      "description": "Feedback text for the offer closure decision. Mandatory if the offer conclusion is rejected.",
+      "type": "string"
+    },
+    "insurerContact": {
+      "$ref": "../../../Generics/v0.5.0/ContactType.json"
+    },
+    "attachmentDocument": {
+      "description": "Additional documents, e.g. policy",
+      "$ref": "../../../Generics/v0.5.0/MultiFileType.json"
+    }
+  },
+  "additionalProperties": false,
+  "allOf": [
+    {
+      "if": {
+        "properties": {
+          "offerConclusionDecision": {
+            "const": "Offer conclusion rejected"
+          }
+        }
+      },
+      "then": {
+        "required": [
+          "offerConclusionDecisionMessage"
+        ]
+      }
+    },
+    {
+      "if": {
+        "properties": {
+          "offerConclusionDecision": {
+            "const": "Offer conclusion accepted"
+          }
+        }
+      },
+      "then": {
+        "anyOf": [
+          {
+            "required": [
+              "quotationNo"
+            ]
+          },
+          {
+            "required": [
+              "contractNo"
+            ]
+          }
+        ]
+      }
+    }
+  ],
+  "required": [
+    "processIdentificationNo",
+    "timestamp",
+    "processName",
+    "subProcessName",
+    "processVersion",
+    "header",
+    "offerConclusionDecision",
+    "insurerContact"
+  ],
+  "unevaluatedProperties": false
 }
